; ModuleID = '/home/carl/AnghaBench/fastdfs/tracker/extr_tracker_mem.c_tracker_mem_free_storages.c'
source_filename = "/home/carl/AnghaBench/fastdfs/tracker/extr_tracker_mem.c_tracker_mem_free_storages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32******, i32)* @tracker_mem_free_storages to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tracker_mem_free_storages(i32****** %0, i32 %1) #0 {
  %3 = alloca i32******, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32******, align 8
  %6 = alloca i32******, align 8
  store i32****** %0, i32******* %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32******, i32******* %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i32*****, i32****** %7, i64 %9
  store i32****** %10, i32******* %6, align 8
  %11 = load i32******, i32******* %3, align 8
  store i32****** %11, i32******* %5, align 8
  br label %12

12:                                               ; preds = %26, %2
  %13 = load i32******, i32******* %5, align 8
  %14 = load i32******, i32******* %6, align 8
  %15 = icmp ult i32****** %13, %14
  br i1 %15, label %16, label %29

16:                                               ; preds = %12
  %17 = load i32******, i32******* %5, align 8
  %18 = load i32*****, i32****** %17, align 8
  %19 = icmp ne i32***** %18, null
  br i1 %19, label %20, label %25

20:                                               ; preds = %16
  %21 = load i32******, i32******* %5, align 8
  %22 = load i32*****, i32****** %21, align 8
  %23 = bitcast i32***** %22 to i32******
  %24 = call i32 @free(i32****** %23)
  br label %25

25:                                               ; preds = %20, %16
  br label %26

26:                                               ; preds = %25
  %27 = load i32******, i32******* %5, align 8
  %28 = getelementptr inbounds i32*****, i32****** %27, i32 1
  store i32****** %28, i32******* %5, align 8
  br label %12

29:                                               ; preds = %12
  %30 = load i32******, i32******* %3, align 8
  %31 = call i32 @free(i32****** %30)
  ret void
}

declare dso_local i32 @free(i32******) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
